[package]
name = "mercator_service"
version = "0.1.0"
authors = ["EPFL-DIAS", "Lionel Sambuc <lionel.sambuc@epfl.ch>"]

edition = "2018"

description = "Mercator Spatial Index service"
#homepage = "https://crates.io/crates/mercator_service"
repository = "https://github.com/epfl-dias/mercator_service"
readme = "README.md"

keywords = []
categories = ["database-implementations", "data-structures"]

license = "MIT"
#license-file = "LICENSE"

include = ["Cargo.toml", "README.md", "LICENSE", "ACKNOWLEDGEMENTS", "src/**/*.rs"]

[features]
static-error-pages = []

[dependencies]
actix-web = "^1.0"
actix-files = "^0.1"
actix-service = "^0.4"
actix-cors = "^0.1"
glob = "^0.3"

measure_time = "^0.6"
memmap = "^0.7"

mercator_db = "^0.1"
mercator_parser = "^0.1"

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
bincode = "^1.1"

# Logging macros API
log = { version = "^0.4", features = ["max_level_trace", "release_max_level_trace"] }
pretty_env_logger = "^0.3" # Logger implementation

[dev-dependencies]
# Only for tests
actix-server-config = "^0.1"
actix-http = "^0.2"